@@ -1,4 +1,11 @@
 ### Configuration variables for makefiles ###
+#
+# Copyright 2009-2011 Joachim Wiedorn
+# All rights reserved.
+# 
+# Licensed under the terms contained in the file 'COPYING'
+# in the source directory.
+#
 
 # NOTE: These variables can also be stored in a file /etc/lilo.defines, e.g.
 # -DIGNORECASE -DONE_SHOT
