@@ -19,6 +19,7 @@ Changes for version 23.2 (unreleased) - Joachim Wiedorn
   General
   -------
     - Remove obsolete OS/2 code.   (make.vars, src/Makefile)
+    - Optimize Makefile and src/Makefile for use of $(MAKE).
 
 
 Changes for version 23.1 (04-Nov-2010) - Joachim Wiedorn
